samples/_failures_safe/1761213296_386b52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_688ec6f3.c: In function ‘main’:
./samples/SAFE/__tmp_688ec6f3.c:157:16: error: missing terminating " character
  157 |         printf("Original
      |                ^~~~~~~~~
./samples/SAFE/__tmp_688ec6f3.c:157:9: error: expected expression at end of input
  157 |         printf("Original
      |         ^~~~~~
./samples/SAFE/__tmp_688ec6f3.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_688ec6f3.c:157:9: error: expected declaration or statement at end of input
